deploy: 6ae2ba11511f7210b055356ffa18eb5bc5a33755

--- a/未分类/windows-10-ruby-开发环境wsl2/index.html
+++ b/未分类/windows-10-ruby-开发环境wsl2/index.html
@@ -11,5 +11,7 @@ sh -c <span style=color:#e6db74>&#34;</span><span style=color:#66d9ef>$(</span>c
 
 <span style=color:#75715e># Rails</span>
 <span style=color:#e6db74>`</span>rails server<span style=color:#e6db74>`</span>默认用3000端口，但win10用不了这端口，这么改一下：<span style=color:#e6db74>`</span>rails server -p 5000<span style=color:#e6db74>`</span>
-</code></pre></div><p>Windows下RubyMine添加remote Ruby SDK：<a href=https://www.jetbrains.com/help/ruby/configuring-remote-interpreters-using-wsl.html#wsl_remote target=_blank rel="nofollow noreferrer noopener">Configure WSL as a remote interpreter</a>。</p><hr><p>更新（20201229）</p><p>上面的方式程序执行效率太差，换成了 VMWare + openSUSE 15.2。</p></div></article><div class=pagination></div></main><footer class=site-footer><span class=left>Gohugo/0.83.1</span>
+</code></pre></div><p>Windows下RubyMine添加remote Ruby SDK：<a href=https://www.jetbrains.com/help/ruby/configuring-remote-interpreters-using-wsl.html#wsl_remote target=_blank rel="nofollow noreferrer noopener">Configure WSL as a remote interpreter</a>。</p><hr><p>更新（20201229）</p><p>上面的方式程序执行效率太差，换成了 VMWare + openSUSE 15.2。</p></div></article><div class=pagination></div></main><footer class=site-footer><span class=left><a href=/author>Authors</a>
+.
+<a href=/tags>Tags</a></span>
 <span class=right><em>乐土为家</em></span></footer></body></html>
