--- a/开发/小技巧/index.html
+++ b/开发/小技巧/index.html
@@ -52,5 +52,7 @@
 [随便什么]: # &#34;这也可以用作注释。&#34;
 [随便什么]: # (这也可以用作注释。)
 </code></pre></div><h2 id=intellij-idea中markdown中添加todo>IntelliJ IDEA中markdown中添加<code>TODO</code></h2><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-markdown data-lang=markdown>[//]: # &#34;todo ← 这个todo会被识别。&#34;
-</code></pre></div><h2 id=gitignore配置idea文件夹里的内容>.gitignore配置.idea文件夹里的内容</h2><p>参照 Intellij IDEA官方指南：<a href=https://intellij-support.jetbrains.com/hc/en-us/articles/206544839 target=_blank rel="nofollow noreferrer noopener">How to manage projects under Version Control Systems</a>来配置。</p><p>可以用<code>.ignore</code>插件。</p><h2 id=todo>todo</h2><p>持续更新</p></div></article><div class=pagination><div class=prev><a href=https://475300.github.io/%E5%BC%80%E5%8F%91/intellij-idea-%E9%85%8D%E7%BD%AE/>Previous Post</a></div></div></main><footer class=site-footer><span class=left>Gohugo/0.83.1</span>
+</code></pre></div><h2 id=gitignore配置idea文件夹里的内容>.gitignore配置.idea文件夹里的内容</h2><p>参照 Intellij IDEA官方指南：<a href=https://intellij-support.jetbrains.com/hc/en-us/articles/206544839 target=_blank rel="nofollow noreferrer noopener">How to manage projects under Version Control Systems</a>来配置。</p><p>可以用<code>.ignore</code>插件。</p><h2 id=todo>todo</h2><p>持续更新</p></div></article><div class=pagination><div class=prev><a href=https://475300.github.io/%E5%BC%80%E5%8F%91/intellij-idea-%E9%85%8D%E7%BD%AE/>Previous Post</a></div></div></main><footer class=site-footer><span class=left><a href=/author>Authors</a>
+.
+<a href=/tags>Tags</a></span>
 <span class=right><em>乐土为家</em></span></footer></body></html>
