--- a/日记本/云居山庆云禅寺/index.html
+++ b/日记本/云居山庆云禅寺/index.html
@@ -33,5 +33,7 @@
 21:00 开静
 21:20 止静
 21:50 开静、养息</p><p>5.5
-吃完早饭，回杭，路遇东林寺。</p><p><img src=/img/2021-05-05-%E5%90%88%E5%BD%B1.jpg alt=东林大佛下与老公合影！></p><p><img src=/img/2021-05-05-%E4%BD%9B%E5%83%8F.jpg alt=东林寺吃饭路上一小佛像！></p></div></article><div class=pagination><div class=prev><a href=https://475300.github.io/%E6%97%A5%E8%AE%B0%E6%9C%AC/%E4%B8%BA%E4%BB%80%E4%B9%88%E8%A6%81%E5%86%99%E5%8D%9A%E5%AE%A2/>Previous Post</a></div></div></main><footer class=site-footer><span class=left>Gohugo/0.83.1</span>
+吃完早饭，回杭，路遇东林寺。</p><p><img src=/img/2021-05-05-%E5%90%88%E5%BD%B1.jpg alt=东林大佛下与老公合影！></p><p><img src=/img/2021-05-05-%E4%BD%9B%E5%83%8F.jpg alt=东林寺吃饭路上一小佛像！></p></div></article><div class=pagination><div class=prev><a href=https://475300.github.io/%E6%97%A5%E8%AE%B0%E6%9C%AC/%E4%B8%BA%E4%BB%80%E4%B9%88%E8%A6%81%E5%86%99%E5%8D%9A%E5%AE%A2/>Previous Post</a></div></div></main><footer class=site-footer><span class=left><a href=/author>Authors</a>
+.
+<a href=/tags>Tags</a></span>
 <span class=right><em>乐土为家</em></span></footer></body></html>
