--- a/开发/windows-10-ruby-开发环境wsl2/index.html
+++ b/开发/windows-10-ruby-开发环境wsl2/index.html
@@ -12,7 +12,7 @@ sh -c <span style=color:#e6db74>&#34;</span><span style=color:#66d9ef>$(</span>c
 
 <span style=color:#75715e># Rails</span>
 <span style=color:#e6db74>`</span>rails server<span style=color:#e6db74>`</span>默认用3000端口，但win10用不了这端口，这么改一下：<span style=color:#e6db74>`</span>rails server -p 5000<span style=color:#e6db74>`</span>
-</code></pre></div><p>Windows下RubyMine添加remote Ruby SDK：<a href=https://www.jetbrains.com/help/ruby/configuring-remote-interpreters-using-wsl.html#wsl_remote target=_blank rel="nofollow noreferrer noopener">Configure WSL as a remote interpreter</a>。</p><hr><p>更新（20201229）</p><p>上面的方式程序执行效率太差，换成了 VMWare + openSUSE 15.2。</p></div></article><div class=pagination><div class=next><a href=https://475300.github.io/%E5%BC%80%E5%8F%91/intellij-idea-%E9%85%8D%E7%BD%AE/>Next Post</a></div></div></main><footer class=site-footer><span class=left><a href=/authors>Authors</a>
+</code></pre></div><p>Windows下RubyMine添加remote Ruby SDK：<a href=https://www.jetbrains.com/help/ruby/configuring-remote-interpreters-using-wsl.html#wsl_remote target=_blank rel="nofollow noreferrer noopener">Configure WSL as a remote interpreter</a>。</p><hr><p>更新（20201229）</p><p>上面的方式程序执行效率太差，换成了 VMWare + openSUSE 15.2。</p></div></article><div class=pagination><div class=next><a href=https://475300.github.io/%E5%BC%80%E5%8F%91/%E5%B0%8F%E6%8A%80%E5%B7%A7/>Next Post</a></div></div></main><footer class=site-footer><span class=left><a href=/authors>Authors</a>
 .
 <a href=/tags>Tags</a></span>
 <span class=right><em>乐土为家</em></span></footer></body></html>
