--- a/交易/股票必胜法/index.html
+++ b/交易/股票必胜法/index.html
@@ -59,7 +59,7 @@ The truly wise should know
 It is a battlefield with no winners
 The only way to win
 Quit early
-</code></pre><h2 id=英文版>英文版</h2><p>英文版罗列了一堆名词，意义可能在于这些词和它们出现的顺序。</p><p>英文版更像诗，要像诗一样脑补。</p><p>而且英文版跟中文的差别很大。</p><p>也许其实真的就是“及早离去”……</p></div></article><div class=pagination><div class=prev><a href=https://475300.github.io/%E4%BA%A4%E6%98%93/psychology-of-a-market-cycle/>Previous Post</a></div></div></main><footer class=site-footer><span class=left><a href=/authors>Authors</a>
+</code></pre><h2 id=英文版>英文版</h2><p>英文版罗列了一堆名词，意义可能在于这些词和它们出现的顺序。</p><p>英文版更像诗，要像诗一样脑补。</p><p>而且英文版跟中文的差别很大。</p><p>也许其实真的就是“及早离去”……</p></div></article><div class=pagination><div class=prev><a href=https://475300.github.io/%E4%BA%A4%E6%98%93/psychology-of-a-market-cycle/>Previous Post</a></div><div class=next><a href=https://475300.github.io/%E4%BA%A4%E6%98%93/%E8%87%AA%E5%8A%A8%E6%8A%93%E5%8F%96553%E7%9A%84%E5%BE%AE%E5%8D%9A/>Next Post</a></div></div></main><footer class=site-footer><span class=left><a href=/authors>Authors</a>
 .
 <a href=/tags>Tags</a></span>
 <span class=right><em>乐土为家</em></span></footer></body></html>
