--- a/交易/交易方法为什么重要/index.html
+++ b/交易/交易方法为什么重要/index.html
@@ -59,11 +59,11 @@
 <p>打个比方。
 我有一袋弹珠：7个白的和3个红的。我让你从袋子里摸出一个，如果你摸出了红的就要给我100块，但是如果你摸出了白色的，我将付你200块。</p>
 <p>大家可能会马上买机票去拉斯维加斯玩这个吧？我觉得大家都意识到了这种情况下你的数学期望是很正的，每次摸出的弹珠累积起来会给你带来特定的数学回报。在摸出几千次弹珠之后，你的收益会非常接近这个开始就知道的正期望。</p>
-<p>这个论坛里有人会想这个问题吗：“万一我连续输了2、3、4甚至5次呢？万一我一直摸出红球呢”不，没人往这方面想，因为数学上说这不会发生，我们所有人都直觉得接受这个说法。</p>
-<p>在交易中，没有确定的数学概率，但是我们确实历史可供检验。通过我们方法中的纪律，我们可以控制胜率，这必然会产生正的数学期望。</p>
-<p>那么，在历史告诉我们某一方法[任何方法]会产生正期望的情况下，绝大多数交易者为什么不愿坚守它呢？为什么那么关注特定交易一笔交易？为什么你会立即买飞机票来这玩弹珠游戏呢（如果你认为我是认真的）？</p>
+<p>这个论坛里有人会想这个问题吗：“万一我连续输了2、3、4甚至5次呢？万一我一直摸出红球呢？”不，没人往这方面想，因为数学上说这不会发生，我们所有人都直觉地接受这个说法。</p>
+<p>在交易中，没有确定的数学概率，但是我们确实有历史可供检验。通过我们方法中的纪律，我们可以控制胜率，这必然会产生正的数学期望。</p>
+<p>那么，在历史告诉我们某一方法[任何方法]会产生正期望的情况下，绝大多数交易者为什么不愿坚守它呢？为什么那么关注特定的一笔交易？为什么你会立即买飞机票来这玩弹珠游戏呢（如果你认为我是认真的）？</p>
 <p>恐惧。</p>
-<p>抛去对失败的恐惧，自信地直面恶魔。任何人都在某个时候要面对它们。交易不是围绕你进行的，而是赚钱。（Trading is not about you, it is about making money.）永远不要忘记这点。</p>
+<p>抛去对失败的恐惧，自信地面对恶魔。任何人都有要直面恶魔的时候。交易不是围绕你进行的，而是赚钱。（Trading is not about you, it is about making money.）永远不要忘记这点。</p>
 <p>希望大家从新文件中有所收获。</p>
 <p>- Vegas</p>
 </div>
